--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,7 @@
   "extends": ["stylelint-config-standard"],
   "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
   "rules": {
-    "import/no-unresolved": "off",
+    "import/extensions": "off",
     "at-rule-no-unknown": [
       true,
       {
